# Shoope-agent-v1

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.sh  start.sh
.omx/logs/: omx-2026-05-01.jsonl
.omx/state/: session.json
alembic/: env.py
alembic/versions/: 0001_core_foundation.py  0002_shop_tokens.py  0003_operator_tasks.py  0004_exports.py  0005_domain_tables.py  0006_knowledge_chat.py  0007_disputes.py  0008_add_is_notified.py  0009_activity_log.py  0010_product_knowledge_v2.py
docs/: SYSTEM_ARCHITECTURE.md  WALKTHROUGH.md
docs/superpowers/plans/: 2026-05-01-shopee-core-engine-foundation.md
docs/superpowers/specs/: 2026-05-01-shopee-agentic-automation-design.md
src/shopee_agent/: __init__.py
src/shopee_agent/app/: __init__.py  analytics_agent.py  backup_agent.py  bi_agent.py  booster_agent.py  chat_agent.py  decisions.py  dispute_agent.py  dispute_evidence_agent.py  events.py  finance_agent.py  gsheets_agent.py  health_agent.py  instruction_generator.py  inventory_agent.py  inventory_health.py  logistics_agent.py  maintenance_agent.py  notification_agent.py  operations.py  optimizer_agent.py  order_agent.py  print_agent.py  product_knowledge_agent.py  queue.py  reporting.py  review_agent.py  task_orchestrator.py  translation_agent.py  vision_agent.py  workflows.py
tests/: conftest.py  test_analytics.py  test_api_health.py  test_architecture_boundaries.py  test_chat_agent.py  test_decision_engine.py  test_dispute_agent.py  test_e2e_engine.py  test_event_ingest.py  test_inventory_agent.py  test_llm_gateway.py  test_multi_shop.py  test_operations.py  test_order_agent.py  test_product_knowledge.py  test_queue_outbox.py  test_reporting.py  test_shopee_auth.py  test_shopee_client.py  test_shopee_resilience.py  test_shopee_webhook.py  test_telegram_callbacks.py  test_workflows.py
(+38 files in other folders)
